@@ -1517,7 +1517,7 @@ void OrthoDoDraw(PyMOLGlobals * G, int render_mode)
   int overlay, text;
   int rightSceneMargin;
   int internal_feedback;
-  int times = 1;
+  int times = 1, origtimes = 0;
   int double_pump = false;
   float *bg_color;
   int skip_prompt = 0;
@@ -1627,6 +1627,7 @@ void OrthoDoDraw(PyMOLGlobals * G, int render_mode)
 
     SceneGLClearColor(0.0, 0.0, 0.0, 1.0);
 
+    origtimes = times;
     while(times--) {
 
       switch (times) {
@@ -1678,7 +1679,7 @@ void OrthoDoDraw(PyMOLGlobals * G, int render_mode)
 	  } else {
 	    OrthoRenderCGO(G);
 	    OrthoPopMatrix(G);
-	    return;
+	    continue;
 	  }
 	}
       }
@@ -1925,10 +1926,23 @@ void OrthoDoDraw(PyMOLGlobals * G, int render_mode)
 	CGOStop(I->orthoCGO);
 	I->orthoCGO->use_shader = true;
       }
-
-      OrthoPushMatrix(G);
-      OrthoRenderCGO(G);
-      OrthoPopMatrix(G);
+      
+      while(origtimes--){
+	switch (origtimes){
+	case 1:
+	  OrthoDrawBuffer(G, GL_BACK_LEFT);
+	  break;
+	case 0:
+	  if(double_pump) {
+	    OrthoDrawBuffer(G, GL_BACK_RIGHT);
+	  } else
+	    OrthoDrawBuffer(G, GL_BACK);
+	  break;
+	}
+	OrthoPushMatrix(G);
+	OrthoRenderCGO(G);
+	OrthoPopMatrix(G);
+      }
     }
   }
 
