@@ -2,6 +2,10 @@
 CHANGE LOG
 =========================================================================
 
+2013-07-15 Blaine Bell <blaine.bell@schrodinger.com>
+
+	* fixed flickering ortho problems on some machines
+
 2013-06-21 Blaine Bell <blaine.bell@schrodinger.com>
 
 	* fixed selection indicators
